# CrazySentencesOnlineClient

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md  fail.txt
UML/: game_module_interaction_D20210808.uxf  module_system_D20210801.uxf
include/CrazySentencesOnlineClient/: AssimpLoader.hpp  AssimpOgreUtility.hpp  Client.hpp  Interface.hpp  Module.hpp  SGTechniqueResolverListener.hpp  SceneMenu.hpp  config.hpp
modules/: CMakeLists.txt
resources/: resources.cfg
resources/models/rem/: 01.blend  01_pmx.material  01_pmx.skeleton  02.blend  03.blend
resources/models_ogre/pose_run/: RUN_000001.pose  RUN_000002.pose  RUN_000003.pose  RUN_000004.pose  RUN_000005.pose  RUN_000006.pose  RUN_000007.pose  RUN_000008.pose  RUN_000009.pose  RUN_000010.pose  RUN_000011.pose  RUN_000012.pose  RUN_000013.pose  RUN_000014.pose  RUN_000015.pose  RUN_000016.pose  RUN_000017.pose  RUN_000018.pose  RUN_000019.pose  RUN_000020.pose  RUN_000021.pose  RUN_000022.pose  RUN_000023.pose  RUN_000024.pose  RUN_000025.pose  RUN_000026.pose  RUN_000027.pose  RUN_000028.pose  RUN_000029.pose  RUN_000030.pose  RUN_000031.pose  RUN_000032.pose  RUN_000033.pose  RUN_000034.pose  RUN_000035.pose  RUN_000036.pose  RUN_000037.pose  RUN_000038.pose  RUN_000039.pose  RUN_000040.pose  (+25 more)
resources/models_ogre/rem/: 01_pmx.mesh
resources_raw/: resources.cfg
resources_raw/models/rem/: 01.pmx  02.pmx  03.pmx
samples/viewer/: CMakeLists.txt  main.cpp  viewer.cpp
share/OGRE/docs/: CMakeLists.txt
src/: Interface.hpp  Module.cpp  Module.hpp
src/UI/: Application.cpp  Application.hpp  Client.cpp  Client.hpp  MainWindow.cpp  MainWindow.hpp  OgreApplication.cpp  OgreApplication.hpp  RTShader.cpp  RTShader.hpp  SGTechniqueResolverListener.cpp  SceneMenu.cpp  SceneMenu.hpp  main.cpp
src/core/: AssimpLoader.cpp  AssimpOgreUtility.cpp  config.hpp
src/example/: main.cpp
src/modules/: CMakeLists.txt
